sfinfo: Add gitweb-theme-kogakure and remove systemd dep
Change-Id: I16d5c6bab975b56254355f96b551a4c76a5cf995

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -19,13 +19,15 @@ packages:
     source: external
   - name: software-factory/zookeeper-lite
     source: external
+  - name: software-factory/gitweb-theme-kogakure
+    source: external
   - name: software-factory/wait4service
     source: internal
     spec: included
   - name: software-factory/buck
     source: external
 
-chrootpackages: "@buildsys-build rpm-build python2-devel systemd"
+chrootpackages: "@buildsys-build rpm-build python2-devel"
 baserepos:
   - name: baseos
     baseurl: http://mirror.centos.org/centos/7/os/x86_64/
