--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -7,6 +7,8 @@ branch: master
 packages:
   - name: software-factory/sf-web-assets
     source: external
+  - name: software-factory/python-glob2
+    source: external
   - name: software-factory/buck
     source: external
   - name: software-factory/gerrit
