Adds shadow-utils to chroot-packages
Otherwise the build mysteriously fails with:
DEBUG:zuulrpm.builder:Running ['mock', '--buildsrpm', '--resultdir', 'zuul-rpm-build', '--spec', 'software-factory/sf-web-assets-distgit/sf-web-assets.spec', '--sources', 'software-factory/sf-web-assets-distgit', '-q']

ERROR: Exception(software-factory/sf-web-assets-distgit/sf-web-assets.spec) Config(sf-x86_64) 1 minutes 19 seconds

Change-Id: Ibc872c374b176fbbc1bb3f8341d021a7a3536637
ERROR: Could not find useradd in chroot, maybe the install failed?

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -31,7 +31,7 @@ packages:
   - name: software-factory/buck
     source: external
 
-chrootpackages: "@buildsys-build rpm-build python2-devel"
+chrootpackages: "@buildsys-build shadow-utils rpm-build python2-devel"
 baserepos:
   - name: centos7-os
     baseurl: http://mirror.centos.org/centos/7/os/x86_64/
