--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -48,6 +48,11 @@ baserepos:
     gpgkey: file:///usr/share/distribution-gpg-keys/centos/RPM-GPG-KEY-CentOS-7
     gpgcheck: 1
 
+  - name: epel7
+    baseurl: http://download.fedoraproject.org/pub/epel/7/x86_64/
+    gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-EPEL-7
+    gpgcheck: 1
+
   - name: openstack-newton
     baseurl: http://mirror.centos.org/centos/7/cloud/x86_64/openstack-newton/
     gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-SIG-Cloud
