--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -25,6 +25,8 @@ packages:
     source: external
   - name: software-factory/gitweb-theme-kogakure
     source: external
+  - name: software-factory/python-pygerrit
+    source: external
   - name: software-factory/wait4service
     source: internal
     spec: included
