--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -27,6 +27,8 @@ packages:
     source: external
   - name: software-factory/python-pygerrit
     source: external
+  - name: software-factory/python-storyboardclient
+    source: external
   - name: software-factory/wait4service
     source: internal
     spec: included
