add python-basicauth package
Change-Id: Ifc314ac35b5c1b5dccedd03cde2a5be51f81011b

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -29,6 +29,8 @@ packages:
     source: external
   - name: software-factory/python-storyboardclient
     source: external
+  - name: software-factory/python-basicauth
+    source: external
   - name: software-factory/wait4service
     source: internal
     spec: included
