--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -38,6 +38,12 @@ packages:
     spec: included
   - name: software-factory/buck
     source: external
+  - name: pysflib
+    source: internal
+    distgit: software-factory/pysflib-distgit
+    sdist-build: python setup.py sdist
+    sdist-output-filter: dist/pysflib-*.tar.gz
+    source-version: python setup.py --version
 
 chrootpackages: "@buildsys-build shadow-utils rpm-build python2-devel"
 baserepos:
