Add python-sfmanager to sfinfo
Change-Id: If7376c3a9a5a96d8307932da5e1575e40f50535e

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -40,6 +40,12 @@ packages:
     spec: included
   - name: software-factory/buck
     source: external
+  - name: python-sfmanager
+    source: internal
+    spec: included
+    sdist-build: python setup.py sdist
+    sdist-output-filter: dist/python-sfmanager-*.tar.gz
+    source-version: python setup.py --version
   - name: pysflib
     source: internal
     distgit: software-factory/pysflib-distgit
