add python-beaker package
Change-Id: Ib58d0f147d1c614e48de930b029dd4c6cc34b35a

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -55,6 +55,8 @@ packages:
   # python-ioc depends
   - name: software-factory/python-cryptography
     source: external
+  - name: software-factory/python-beaker
+    source: external
   # python-cryptography depends
   - name: software-factory/python-cryptography-vectors
     source: external
