add germqtt-related projects
Change-Id: Ie829027b17b31531d9185d0e607434c8afe259cb

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -35,6 +35,10 @@ packages:
     source: external
   - name: software-factory/python-redmine
     source: external
+  - name: software-factory/germqtt
+    source: external
+  - name: software-factory/python-gerritlib
+    source: external
   - name: software-factory/wait4service
     source: internal
     spec: included
