add python-cffi package
Change-Id: I7df2663f4eb77544baa030198a6f0f2a5ff19b59

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -61,6 +61,8 @@ packages:
     source: external
   - name: software-factory/python-beaker
     source: external
+  - name: software-factory/python-cffi
+    source: external
   # python-cryptography depends
   - name: software-factory/python-cryptography-vectors
     source: external
