--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -63,6 +63,8 @@ packages:
     source: external
   - name: software-factory/python-cffi
     source: external
+  - name: software-factory/python-jwkest
+    source: external
   # python-cryptography depends
   - name: software-factory/python-cryptography-vectors
     source: external
