Add python-htpasswd to sf-master.yaml
Change-Id: Ib030e53232d380604bcbce2a1e1ced1f97925c89

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -33,6 +33,8 @@ packages:
     source: external
   - name: software-factory/python-basicauth
     source: external
+  - name: software-factory/python-htpasswd
+    source: external
   - name: software-factory/python-redmine
     source: external
   - name: software-factory/germqtt
