Add python-orderedmultidict to sf-master.yaml
Change-Id: I2532e791be894f4603b262e4e59d043a174c4cd9

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -35,6 +35,8 @@ packages:
     source: external
   - name: software-factory/python-htpasswd
     source: external
+  - name: software-factory/python-orderedmultidict
+    source: external
   - name: software-factory/python-redmine
     source: external
   - name: software-factory/germqtt
