--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -68,14 +68,27 @@ packages:
     sdist-build: python setup.py sdist
     sdist-output-filter: dist/pysflib-*.tar.gz
     source-version: python setup.py --version
+  #- name: cauth
+  #  source: internal
+  #  distgit: software-factory/cauth-distgit
+  #  sdist-build: python setup.py sdist
+  #  sdist-output-filter: dist/pysflib-*.tar.gz
+  #  source-version: python setup.py --version
+  # cauth depends
   - name: software-factory/python-oic
     source: external
-  # python-ioc depends
+  - name: software-factory/python-mockldap
+    source: external
+  - name: software-factory/python-httmock
+    source: external
+  - name: software-factory/python-wsgiref
+    source: external
+  # python-ioc depends (cauth)
   - name: software-factory/python-jwkest
     source: external
   - name: software-factory/python-alabaster
     source: external
-  # python-ioc build depends
+  # python-ioc build depends (cauth)
   - name: software-factory/python-testfixtures
     source: external
   - name: software-factory/python-cryptodomex
