--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -43,6 +43,8 @@ packages:
     source: external
   - name: software-factory/python-gerritlib
     source: external
+  - name: software-factory/python-jenkins-job-builder
+    source: external
   - name: software-factory/python-deepdiff
     source: external
   - name: software-factory/wait4service
