add cauth package
Change-Id: I20dc5110793dde743d2e4abe4f3b8e2d49c88adc

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -70,12 +70,12 @@ packages:
     sdist-build: python setup.py sdist
     sdist-output-filter: dist/pysflib-*.tar.gz
     source-version: python setup.py --version
-  #- name: cauth
-  #  source: internal
-  #  distgit: software-factory/cauth-distgit
-  #  sdist-build: python setup.py sdist
-  #  sdist-output-filter: dist/pysflib-*.tar.gz
-  #  source-version: python setup.py --version
+  - name: cauth
+    source: internal
+    distgit: software-factory/cauth-distgit
+    sdist-build: python setup.py sdist
+    sdist-output-filter: dist/cauth-*.tar.gz
+    source-version: python setup.py --version
   # cauth depends
   - name: software-factory/python-oic
     source: external
