add shade and nodepool package
Change-Id: Ia4854cd654ac1f7e2d2bcacac42c85efda13f411

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -10,6 +10,10 @@ packages:
     source: external
   - name: software-factory/zuul-swift-upload
     source: external
+  - name: software-factory/shade
+    source: external
+  - name: software-factory/nodepool
+    source: external
   - name: software-factory/python-glob2
     source: external
   - name: software-factory/buck
