add zuul and storyboard package
Change-Id: Iec4d7279ec944ad85d572802ce1603ca506fb3f8

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -14,6 +14,14 @@ packages:
     source: external
   - name: software-factory/nodepool
     source: external
+  - name: software-factory/zuul
+    source: external
+  - name: software-factory/python-email
+    source: external
+  - name: software-factory/python-sqlalchemy-fulltext-search
+    source: external
+  - name: software-factory/storyboard
+    source: external
   - name: software-factory/python-glob2
     source: external
   - name: software-factory/buck
