--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -89,6 +89,8 @@ packages:
     source: external
   - name: software-factory/python-deepdiff
     source: external
+  - name: software-factory/python-log2gearman
+    source: external
   - name: software-factory/wait4service
     source: internal
     spec: included
