--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -17,6 +17,10 @@ packages:
   - name: software-factory/zuul
     source: external
 
+  - name: software-factory
+    source: internal
+    spec: included
+
 # Mirror2swift
   - name: software-factory/mirror2swift
     source: external
