--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -145,27 +145,32 @@ chrootpackages: "@buildsys-build shadow-utils rpm-build python2-devel"
 baserepos:
   - name: centos7-os
     baseurl: http://mirror.centos.org/centos/7/os/x86_64/
+    mirror: http://mirrorlist.centos.org/?release=7&arch=x86_64&repo=os
     gpgkey: file:///usr/share/distribution-gpg-keys/centos/RPM-GPG-KEY-CentOS-7
     gpgcheck: 1
     kojipriority: 12
 
   - name: centos7-updates
     baseurl: http://mirror.centos.org/centos/7/updates/x86_64/
+    mirror: http://mirrorlist.centos.org/?release=7&arch=x86_64&repo=updates
     gpgkey: file:///usr/share/distribution-gpg-keys/centos/RPM-GPG-KEY-CentOS-7
     gpgcheck: 1
     kojipriority: 11
 
   - name: centos7-extras
     baseurl: http://mirror.centos.org/centos/7/extras/x86_64/
+    mirror: http://mirrorlist.centos.org/?release=7&arch=x86_64&repo=extras
     gpgkey: file:///usr/share/distribution-gpg-keys/centos/RPM-GPG-KEY-CentOS-7
     gpgcheck: 1
     kojipriority: 10
 
+extrarepos:
   - name: epel7
+    mirror: https://mirrors.fedoraproject.org/metalink?repo=epel-7&arch=x86_64
     baseurl: http://download.fedoraproject.org/pub/epel/7/x86_64/
     gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-EPEL-7
     gpgcheck: 1
-    kojipriority: 90
+    kojipriority: 110
 
   - name: openstack-newton
     baseurl: http://mirror.centos.org/centos/7/cloud/x86_64/openstack-newton/
