--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -17,6 +17,9 @@ packages:
   - name: software-factory/zuul
     source: external
 
+  - name: software-factory/sf
+    source: external
+
   - name: software-factory/software-factory
     source: internal
 
