Add python-httpretty and python-responses
Change-Id: I00b1782aca08935211cc3c1abec2a9b36baf66c0

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -199,6 +199,15 @@ packages:
     source: external
   - name: software-factory/python-requests-toolbelt
     source: external
+  - name: software-factory/python-sure
+    source: external
+  - name: software-factory/python-httpretty
+    source: external
+  - name: software-factory/python-responses
+    source: external
+  - name: software-factory/python-cookies
+    source: external
+
 
 chrootpackages: "@buildsys-build shadow-utils rpm-build python2-devel"
 baserepos:
