Add hydrant to dependencies
Change-Id: I069b8a899e6f2783905582e711d4439771b2187b

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -156,6 +156,9 @@ packages:
   - name: software-factory/ochlero
     source: internal
     spec: included
+  - name: software-factory/hydrant
+    source: internal
+    spec: included
 
 # Epel import
   - name: software-factory/acme-tiny
