Add ansible-lint and yamllint
Change-Id: Ic905f383120e337aa36af29db0992fcc0cfa4c05

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -29,6 +29,12 @@ packages:
     source: internal
     spec: included
 
+# Test tools
+  - name: software-factory/ansible-lint
+    source: external
+
+  - name: software-factory/yamllint
+    source: external
 
 # Mirror2swift
   - name: software-factory/mirror2swift
