Add ZuulV3 packages
Change-Id: I5c53bcce06281ce772491431d987e96a5099a982

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -29,6 +29,16 @@ packages:
     source: internal
     spec: included
 
+# ZuulV3
+  - name: software-factory/zuul3
+    source: external
+  - name: software-factory/nodepool3
+    source: external
+  - name: software-factory/python-github3
+    source: external
+  - name: software-factory/python-uritemplate
+    source: external
+
 # Test tools
   - name: software-factory/ansible-lint
     source: external
