--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -38,6 +38,8 @@ packages:
     source: external
   - name: software-factory/python-uritemplate
     source: external
+  - name: software-factory/GitPython
+    source: external
 
 # Test tools
   - name: software-factory/ansible-lint
