Add python-tox (bis)
Change-Id: I96f8ff8769fffd77c3038b113f1504d0f57b32de

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -59,6 +59,9 @@ packages:
   - name: software-factory/python-pluggy
     source: external
 
+  - name: software-factory/python-virtualenv
+    source: external
+
 # Mirror2swift
   - name: software-factory/mirror2swift
     source: external
