--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -86,6 +86,9 @@ packages:
   - name: software-factory/python-nose-htmloutput
     source: external
 
+  - name: software-factory/python-nose-timer
+    source: external
+
 # Mirror2swift
   - name: software-factory/mirror2swift
     source: external
