Add requirements for ara 0.13.1
Change-Id: Ie7f2ba2ac627ba18a0ee132ccc5aa0b285fb9cc3

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -80,6 +80,24 @@ packages:
   - name: software-factory/python-junit_xml
     source: external
 
+  - name: software-factory/python-pyfakefs
+    source: external
+
+  - name: software-factory/python-XStatic-DataTables
+    source: external
+
+  - name: software-factory/python-XStatic-Patternfly
+    source: external
+
+  - name: software-factory/python-XStatic-Bootstrap-SCSS
+    source: external
+
+  - name: software-factory/python-XStatic-Patternfly-Bootstrap-Treeview
+    source: external
+
+  - name: software-factory/python-jinja2
+    source: external
+
   - name: software-factory/ara
     source: external
 
