Add python-markupsafe and openstack-macros to buildsys
Change-Id: I0d41cfaeab32e291d74218d0a84731dacffb225b

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -98,6 +98,9 @@ packages:
   - name: software-factory/python-jinja2
     source: external
 
+  - name: software-factory/python-markupsafe
+    source: external
+
   - name: software-factory/ara
     source: external
 
@@ -290,7 +293,7 @@ packages:
   - name: software-factory/python-funcparserlib
     source: external
 
-chrootpackages: "@buildsys-build buildsys-macros-el7 make gcc shadow-utils rpm-build python2-devel"
+chrootpackages: "@buildsys-build buildsys-macros-el7 make gcc shadow-utils rpm-build python2-devel openstack-macros"
 
 baserepos:
   - name: centos7-os
