Add GitPython requirements
Change-Id: I7f04c7bd923d78c75425229129312d8147718a52

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -38,6 +38,10 @@ packages:
     source: external
   - name: software-factory/python-uritemplate
     source: external
+  - name: software-factory/python-smmap
+    source: external
+  - name: software-factory/python-gitdb
+    source: external
   - name: software-factory/GitPython
     source: external
   - name: software-factory/python-os-client-config
