Add python-CacheControl (for zuul3)
Change-Id: I45e198d96e4625092aafc19b141821cb7bf446c0

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -44,6 +44,8 @@ packages:
     source: external
   - name: software-factory/GitPython
     source: external
+  - name: software-factory/python-CacheControl
+    source: external
   - name: software-factory/python-os-client-config
     source: external
 
