add python-unidecode from epel
Change-Id: I9c7a6a02f2e0a81b0437a42f9ded594b1b0ca5b3

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -313,6 +313,8 @@ packages:
     source: external
   - name: software-factory/python-funcparserlib
     source: external
+  - name: software-factory/python-unidecode
+    source: external
 
 chrootpackages: "@buildsys-build buildsys-macros-el7 make gcc shadow-utils rpm-build python2-devel openstack-macros"
 
