Add pelican pkgs
Change-Id: I2a187d3160a7a88a2f36fe266024b3022762f1fa

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -315,6 +315,10 @@ packages:
     source: external
   - name: software-factory/python-unidecode
     source: external
+  - name: software-factory/python-pelican
+    source: external
+  - name: software-factory/python-feedparser
+    source: external
 
 chrootpackages: "@buildsys-build buildsys-macros-el7 make gcc shadow-utils rpm-build python2-devel openstack-macros"
 
